--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   icons_plus: ^5.0.0
   flutter_hooks: ^0.21.2
   linear_progress_bar: ^1.2.0
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
