--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_hooks: ^0.21.2
   linear_progress_bar: ^1.2.0
   loading_animation_widget: ^1.3.0
+  flutter_riverpod: ^2.6.1
+  hooks_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
