--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   loading_animation_widget: ^1.3.0
   flutter_riverpod: ^2.6.1
   hooks_riverpod: ^2.6.1
+  flash: ^3.1.1
 
 dev_dependencies:
   flutter_test:
