--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   hooks_riverpod: ^2.6.1
   flash: ^3.1.1
+  quickalert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
