--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   hooks_riverpod: ^2.6.1
   flash: ^3.1.1
   quickalert: ^1.1.0
+  country_code_picker: ^3.3.0
 
 dev_dependencies:
   flutter_test:
